--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.0.2
 gdown==4.4.0
 Werkzeug==2.0.2
-torch==1.10.0
-torchvision==0.11.1
+torch==1.12.0  # Updated version
+torchvision==0.11.1  # You may need to update this as well based on torch compatibility
 Pillow==8.4.0
 numpy==1.21.4
 opencv-python-headless==4.5.4.60
